[Project] Add new entry for entryway storage & bench

--- a/_sass/_includes/_content.scss
+++ b/_sass/_includes/_content.scss
@@ -66,7 +66,7 @@
 		padding: 60px $grid-spacing;
 	}
 
-	h1, h2, h3, h4, h5, h6, p, ul, ol {
+	h1, h2, h3, h4, h5, h6, p, ul, ol, .not-full-spread {
 		margin-left: auto;
 		margin-right: auto;
 
